--- a/default.conf
+++ b/default.conf
@@ -1,9 +1,9 @@
 
 server {
     listen 443 ssl;
-    server_name create-vpn.net;
-    ssl_certificate /etc/letsencrypt/live/create-vpn.net/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/create-vpn.net/privkey.pem;
+    server_name creator-vpn.net;
+    ssl_certificate /etc/letsencrypt/live/creator-vpn.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/creator-vpn.net/privkey.pem;
 
     root /app ;
     location = favicon.ico {
