--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,6 @@ services:
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
       - ./dist:/app
-      # - /etc/letsencrypt:/etc/letsencrypt/
+      - /etc/letsencrypt:/etc/letsencrypt/
 
     network_mode: 'host'
