--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,8 @@
-
+server {
+    listen 80;
+    server_name tiktok.pp.ru;
+    return 301 https://$host$request_uri;
+}
 server {
     listen 443 ssl;
     server_name creator-vpn.net;
