--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name tiktok.pp.ru;
+    server_name creator-vpn.net;
     return 301 https://$host$request_uri;
 }
 server {
